updated swagger definition and generated Model classes
